--- a/style/global.css
+++ b/style/global.css
@@ -1,3 +1,7 @@
+html {
+    /* make the cursor always normal */
+    cursor: default;
+}
 body {
     background-color: #ffffff;
     color: #000000;
@@ -5,6 +9,48 @@ body {
     font-weight: 800;
     margin-top: 0.2rem;
     padding: 0;
+}
+
+
+.shake {
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+    0% {
+        transform: translate(1px, 1px);
+    }
+    10% {
+        transform: translate(-1px, -2px);
+    }
+    20% {
+        transform: translate(-3px, 0px);
+    }
+    30% {
+        transform: translate(3px, 2px);
+    }
+    40% {
+        transform: translate(1px, -1px);
+    }
+    50% {
+        transform: translate(-1px, 2px);
+    }
+    60% {
+        transform: translate(-3px, 1px);
+    }
+    70% {
+        transform: translate(3px, 1px);
+    }
+    80% {
+        transform: translate(-1px, -1px);
+    }
+    90% {
+        transform: translate(1px, 2px);
+    }
+    100% {
+        transform: translate(1px, -2px);
+    }
 }
 .menuContainer {
     height: 100vh;
@@ -120,7 +166,13 @@ body {
     width: 3.5rem;
     height: 3.5rem;
     border-radius: 20%;
+    transition: all 0.2s ease-in-out;
 }
+.gameCell:active {
+    /* make it a little boop */
+    transform: scale(0.9);
+}
+
 .active {
     background-color: #40ae87;
     transition: 0.1s;
