--- a/style/global.css
+++ b/style/global.css
@@ -110,13 +110,14 @@ body {
 }
 @media only screen and (min-width: 600px) {
     .title {
-        font-size: 4rem;
+        font-size: 1.4rem;
     }
     .subtitle {
-        font-size: 1.4rem;
+        font-size: 0.8rem;
     }
 }
 .speedContainer {
+    /*  */
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -125,7 +126,6 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
 }
 .gameContainer {
     background-color: #f0f0f0;
